# proton-api-rs

./: Cargo.toml  README.md
.github/workflows/: checks.yml
examples/: user_id.rs  user_id_sync.rs
go-gpa-server/: build.rs
go-gpa-server/go/: lib.go
go-gpa-server/src/: lib.rs
go-srp/: Cargo.toml  build.rs
go-srp/go/: go.mod  go.sum
go-srp/src/: lib.rs
src/: lib.rs
src/client/: api.rs  client_builder.rs  error.rs  mod.rs
src/client/http_client/: mod.rs  reqwest_client.rs
src/client/types/: auth.rs  event.rs  mod.rs
src/clientv2/: client.rs  mod.rs  request_repeater.rs  session.rs  session_policies.rs  totp.rs
src/domain/: event.rs  human_verification.rs  labels.rs  mod.rs  user.rs
src/http/: client.rs  mod.rs  request.rs  reqwest_client.rs  sequence.rs  ureq_client.rs
src/requests/: auth.rs  errors.rs  event.rs  mod.rs  tests.rs  user.rs
tests/session/: login.rs  main.rs  utils.rs
