[package]
name = "proton-api-rs"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
version = "0.1.0"
edition = "2021"
license = "AGPL"
description = "Unofficial implemention of proton REST API in rust"
readme = "README.md"
keywords = ["proton", "rest", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
