[package]
name = "proton-api-rs"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
version = "0.1.3"
edition = "2021"
license = "AGPL-3.0-only"
description = "Unofficial implemention of proton REST API in rust"
homepage = "https://github.com/LeanderBB/proton-api-rs/"
repository = "https://github.com/LeanderBB/proton-api-rs/"
readme = "README.md"
keywords = ["proton", "rest", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
go-srp = {path = "go-srp", version = "0.1.2"}
thiserror = "1"
serde = "1"
serde_repr = "0.1"
serde_json = "1"
base64 = "0.21"
secrecy = "0.8"
anyhow = "1.0"
bytes = "1.4"
log = "0.4"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "deflate", "stream", "cookies", "multipart", "rustls","rustls-tls"]

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
tokio = {version ="1", features = ["full"]}


[[example]]
name = "user_id"
